--- a/style2.css
+++ b/style2.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-    background-color: #F9A822;
+    background-image: url("./imgs/Frame 3.png");
     width: 100%;
     height: 60px;
     display: flex;
@@ -23,10 +23,11 @@ header {
         font-family: "Kufam", serif;
         font-size: 35px;
         margin-left: 10%;
+        color: rgb(255, 187, 0);
     }
   }
 .container1{
-    background-color: rgb(245, 233, 219);
+    background-color: rgb(212, 194, 173);
     margin-top: 90px;
     width: 900px;
     height: 600px;
@@ -61,6 +62,9 @@ header {
     align-items: center;
     gap: 20px;
 }
+.box2 > a{
+    color: #2A57A6;
+}
 .box2 > button{
     width: 190px;
     border: none;
@@ -72,7 +76,24 @@ header {
 }
 .box3{
     width: 300px;
+    position: relative;
 }
+.imgSobre{
+    width: 200px;
+    right: 2px;
+    position: absolute;
+    bottom: 2px;
+}
+.box3 > .imgBack{
+    width: 100%;
+}
+.imgCopy{
+    position: absolute;
+    right: 30px;
+    top: 16px;
+    width: 40px;
+}
+
 .liRes{
     border-bottom: 2px solid #c5c5c5;
     font-size: 24px;
@@ -92,11 +113,13 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
 }
 .contChild2{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .result > img {
